--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "pnpm run build && pnpm run gh-pages",
+    "gh-pages": "gh-pages -d dist -t"
   },
   "dependencies": {
-    "astro": "5.16.7"
+    "astro": "5.16.7",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@midudev/tailwind-animations": "^0.2.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "gh-pages": "^6.3.0"
   }
 }
