--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "gh-pages": "gh-pages -d dist -t"
   },
   "dependencies": {
-    "astro": "5.16.7",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "astro": "5.16.7"
   },
   "devDependencies": {
     "@midudev/tailwind-animations": "^0.2.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.23",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "4"
   }
 }
